[gd_scene load_steps=17 format=2]

[ext_resource path="res://plants/cablit.tres" type="Resource" id=1]
[ext_resource path="res://plants/bunt.tres" type="Resource" id=2]
[ext_resource path="res://plants/ice_melon.tres" type="Resource" id=3]
[ext_resource path="res://assets/plants/grunth/grunth_grown.png" type="Texture" id=4]
[ext_resource path="res://plants/grunth.tres" type="Resource" id=5]
[ext_resource path="res://deities/meadows/offering_pane.gd" type="Script" id=6]
[ext_resource path="res://deities/meadows/meadows_deity.gd" type="Script" id=7]
[ext_resource path="res://assets/deities/stag_sheet.png" type="Texture" id=8]
[ext_resource path="res://deities/meadows/meadows_offering_v2.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.428, 35.6272 )

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Offering:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 0.647059 ), Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0.647059 ), Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 0.137255 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ear_flick"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ), Vector2( 4, 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "f_idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "look"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ) ]
}

[node name="Stag" type="Node2D"]
script = ExtResource( 7 )
offerings = [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ) ]
rewards = [ null, null, ExtResource( 2 ), null ]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
hframes = 5
vframes = 5
frame = 15

[node name="AppearanceTimer" type="Timer" parent="."]
one_shot = true

[node name="OfferingTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="OfferingPane" type="Sprite" parent="." groups=[
"plant_actionable",
]]
position = Vector2( 13, -79.8882 )
texture = ExtResource( 9 )
script = ExtResource( 6 )

[node name="Offering" type="Sprite" parent="OfferingPane"]
modulate = Color( 1, 1, 1, 0.648125 )
position = Vector2( 0, -17 )
texture = ExtResource( 4 )

[node name="OfferingArea" type="Area2D" parent="OfferingPane"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OfferingPane/OfferingArea"]
shape = SubResource( 1 )

[node name="OfferingBlink" type="AnimationPlayer" parent="OfferingPane"]
anims/blink = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="StagAnimator" type="AnimationPlayer" parent="."]
anims/ear_flick = SubResource( 3 )
anims/f_idle = SubResource( 4 )
anims/look = SubResource( 5 )
anims/r_idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[connection signal="timeout" from="AppearanceTimer" to="." method="_on_AppearanceTimer_timeout"]
[connection signal="timeout" from="OfferingTimer" to="." method="_on_OfferingTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
